fixtures/negative/invalid_primary_cigar.sam
@SQ	SN:MT	LN:16569
bad-cigar	0	MT	1	60	5M	*	0	0	ACGT	IIII
